--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -5,9 +5,14 @@ description = "Knowledge base builder for valkompass.ai"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "bertopic>=0.17.0",
+    "nltk>=3.9.1",
     "pdfplumber>=0.11.6",
     "pydantic>=2.11.5",
+    "sentence-transformers>=4.1.0",
     "typer (>=0.16.0,<0.17.0)",
+    "langdetect>=1.0.9",
+    "scikit-learn>=1.0"
 ]
 
 [dependency-groups]
