--- a/knowledge-base/pyproject.toml
+++ b/knowledge-base/pyproject.toml
@@ -10,9 +10,8 @@ dependencies = [
     "pdfplumber>=0.11.6",
     "pydantic>=2.11.5",
     "sentence-transformers>=4.1.0",
-    "typer (>=0.16.0,<0.17.0)",
     "langdetect>=1.0.9",
-    "scikit-learn>=1.0"
+    "scikit-learn>=1.0",
 ]
 
 [dependency-groups]
