Add parties prefix mapping

--- a/commands/package.json
+++ b/commands/package.json
@@ -4,11 +4,12 @@
   "description": "Commands for fetching political data",
   "type": "module",
   "scripts": {
-    "fetch-politicians": "npx tsx fetch-politicians.ts"
+    "fetch-politicians": "bunx tsx fetch-politicians.ts",
+    "extract-parties": "bunx tsx extract-parties.ts"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "tsx": "^4.7.0",
     "typescript": "^5.0.0"
   }
-} 
+}
